@@ -32,7 +32,7 @@ AboutDialog::AboutDialog(QWidget *parent)
     , m_websiteLinkString("<a href='%1' style='text-decoration:none;font-size:14px;color:#1374e8;'>%2</a>")
 {
     this->setStyleSheet("QDialog{border:1px solid #000000;border-radius:2px;background:rgba(255, 255, 255, 0.7);}QDialog:hover{background: rgba(255, 255, 255, 1.0);}");
-    this->setWindowFlags(Qt::FramelessWindowHint | Qt::WindowStaysOnTopHint);
+    this->setWindowFlags(Qt::FramelessWindowHint | Qt::WindowStaysOnTopHint| Qt::X11BypassWindowManagerHint);
     this->setWindowTitle(tr("Kylin Weather - About"));
     this->setWindowIcon(QIcon(":/res/indicator-china-weather.png"));
     this->setFixedWidth(456);
