@@ -30,7 +30,7 @@ int main(int argc, char *argv[])
     QApplication a(argc, argv);
     a.setOrganizationName("kylin");
     a.setApplicationName("Kylin Weather (indication-china-weather)");
-    a.setApplicationVersion("3.0.0");
+    a.setApplicationVersion("3.0.1");
     a.setQuitOnLastWindowClosed(false);//Avoid that after hiding mainwindow, close the sub window would cause the program exit
 
     QString locale = QLocale::system().name();
