@@ -1,6 +1,7 @@
 indicator-china-weather (3.0.1-0ubuntu2) cosmic; urgency=low
   
   * Handling mouse events on pallets.
+  * PrimaryScreen display.
 
  -- lixiang <lixiang@kylinos.cn>  Tue, 20 Nov 2018 09:18:09 +0800
 
